--- a/poketmon-front/src/views/main/style.css
+++ b/poketmon-front/src/views/main/style.css
@@ -73,6 +73,8 @@
  
  .poket-main-list-content {
    padding: 0 30px 0 30px;
+   width: 100%;
+   height: 100%;
  
    display: flex;
    flex-direction: column;
