--- a/poketmon-front/src/views/main/style.css
+++ b/poketmon-front/src/views/main/style.css
@@ -72,13 +72,25 @@
  }
  
  .poket-main-list-content {
-   padding: 0 30px 0 30px;
    width: 100%;
    height: 100%;
+
+   gap: 10px;
  
    display: flex;
    flex-direction: column;
-   justify-content: flex-start;
+   justify-content: center;
+   align-items: center;
+ }
+
+ .poket-main-list-name-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 450px;
+  width: 100%;
+  border: 0.7px solid rgba(0,0,0,0.7);
+  border-radius: 40px;
  }
  
  .poket-main-search {
