--- a/poketmon-front/src/components/PoketListItem/style.css
+++ b/poketmon-front/src/components/PoketListItem/style.css
@@ -1,7 +1,23 @@
+#poket-name-wrapper {
+  width: 100px;
+  height: 36px;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
 .poket-name-badge {
   border: 1px solid rgba(0,0,0,0.5);
   border-radius: 30px;
-  padding: 6px 20px;
+  margin-right: 10px;
+
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   color: rgba(0,0,0,0.5);
 
