--- a/poketmon-front/src/components/Pagination/style.css
+++ b/poketmon-front/src/components/Pagination/style.css
@@ -1,67 +1,81 @@
-#pagination-wrapper {
+.pagination{
+  margin: 20px 0;
+
   display: flex;
   justify-content: center;
-  gap: 20px;
 }
 
-.pagination-change-link-box {
+.pagination-button{
+  margin: 0px 10px;
+  
   display: flex;
   align-items: center;
-  gap: 4px;
 
+  transition: all 0.3s;
+}
+
+.pagination-button:hover .pagination-button-text{
   cursor: pointer;
+  border-bottom: 1px solid black;
 }
 
-.pagination-change-link-text {
-  color: rgba(0,0,0,0.7);
+.pagination-left-icon{
+  margin: 0px 4px;
 
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 140%;
-}
+  width: 16px;
+  height: 16px;
 
-.pagination-divider {
-  color: rgba(0,0,0,0.1);
-
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 140%;
-
-  cursor: default;
-}
-
-.pagination-text-active {
-  color: rgba(0,0,0,1);
-
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 140%;
-
-  cursor: default;
-}
-
-.pagination-text {
-  color: rgba(0,0,0,0.4);
-
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 140%;
-
-  cursor: pointer;
-}
-
-.icon {
-  width: 100%;
-  height: 100%;
-
-  background-position: 50% 50%;
   background-size: 100% 100%;
+  background-position: 50% 50%;
 }
 
-.expand-right-icon {
-  display: flex;
+.pagination-right-icon{
+  margin: 0px 4px;
+
+  width: 16px;
+  height: 16px;
+
+  background-size: 100% 100%;
+  background-position: 50% 50%;
 }
 
-.expand-left-icon {
-  display: flex;
+.pagination-button-text{
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+.pagination-text{
+  margin: 0px 10px;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.pagination-page{
+  margin: 0px 10px;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.pagination-page:hover{
+  cursor: pointer;
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 700;
+  border-bottom: 1px solid black;
+}
+
+.pagination-page-active{
+  margin: 0px 10px;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 100%;
+  color: rgba(0, 0, 0, 1);
 }
