--- a/poketmon-front/src/views/main/style.css
+++ b/poketmon-front/src/views/main/style.css
@@ -103,14 +103,15 @@
   height: 100%;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   
   gap: 15px;
 }
 
 .poket-main-contents-save-name {
-  width: calc(100% - 70px - 70px);
-  height: calc(100% - 40px - 40px);
+  width: calc(100% - 70px 70px - 70px);
+  height: calc(100% - 50px - 50px);
   padding: 10px;
 
   background-color: rgba(255,255,255,1);
@@ -120,6 +121,11 @@
 
   border: none;
   border-radius: 35px;
+}
+
+.poket-main-pagination {
+  display: flex;
+  justify-content: center;
 }
 
 .poket-main-input-box {
