--- a/poketmon-front/src/components/PoketListItem/style.css
+++ b/poketmon-front/src/components/PoketListItem/style.css
@@ -22,6 +22,11 @@
   color: rgba(0,0,0,0.5);
 
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 140%;
+}
+
+.poket-name-badge:hover {
+  cursor: pointer;
+  background-color: rgba(0,0,0,0.1);
 }
