--- a/poketmon-front/src/views/main/style.css
+++ b/poketmon-front/src/views/main/style.css
@@ -105,19 +105,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   
   gap: 15px;
 }
 
 .poket-main-contents-save-name {
-  width: calc(100% - 70px 70px - 70px);
-  height: calc(100% - 50px - 50px);
+  width: 1600px;
+  height: 500px;
   padding: 10px;
 
   background-color: rgba(255,255,255,1);
 
   display: flex;
   flex-direction: row;
+  align-items: center;
 
   border: none;
   border-radius: 35px;
