--- a/poketmon-front/src/components/PoketListItem/style.css
+++ b/poketmon-front/src/components/PoketListItem/style.css
@@ -1,32 +1,27 @@
-#poket-name-wrapper {
-  width: 150px;
-  height: 48px;
-
+#poket-wrapper {
+  margin-left: 7px;
   display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-
-.poket-name-badge {
-  border: 1px solid rgba(0,0,0,0.5);
-  border-radius: 30px;
-  margin-right: 10px;
-
-  width: 100%;
-  height: 100%;
-
-  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  color: rgba(0,0,0,0.5);
+  width: 150px;
+  height: 500px;
 
-  font-size: 24px;
+  border: 1px solid rgba(0,0,0,0.1);
+  border-radius: 20px;
+
+  gap: 1px;
+}
+
+.poket-badge-name{
+  font-size: 18px;
   font-weight: 600;
   line-height: 140%;
 }
 
-.poket-name-badge:hover {
-  cursor: pointer;
-  background-color: rgba(0,0,0,0.1);
+.poket-badge {
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 140%;
 }
