--- a/poketmon-front/src/components/PoketListItem/style.css
+++ b/poketmon-front/src/components/PoketListItem/style.css
@@ -1,4 +1,4 @@
-#poket-wrapper {
+.poket-wrapper {
   margin-left: 7px;
   display: flex;
   flex-direction: column;
@@ -12,6 +12,8 @@
   border-radius: 20px;
 
   gap: 1px;
+
+  cursor: pointer;
 }
 
 .poket-badge-name{
