--- a/poketmon-front/src/views/main/style.css
+++ b/poketmon-front/src/views/main/style.css
@@ -106,8 +106,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
-  gap: 15px;
 }
 
 .poket-main-contents-save-name {
@@ -119,10 +117,13 @@
 
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
 
   border: none;
   border-radius: 35px;
+
+  gap: 13px;
 }
 
 .poket-main-pagination {
