--- a/poketmon-front/src/views/main/style.css
+++ b/poketmon-front/src/views/main/style.css
@@ -85,6 +85,10 @@
 .poket-main-button {
   height: 50px;
   width: 70px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   font-size: 14px;
   font-weight: 500;
